--- a/_posts/2017-07-11-css 张鑫旭.markdown
+++ b/_posts/2017-07-11-css 张鑫旭.markdown
@@ -3,6 +3,8 @@ title: css 张鑫旭
 layout: default
 date:   2017-07-11 07:05:59 +0800
 categories: jekyll update
+category: css
+
 ---
 # 1、Relative 
 ## 和absolute的搭配：
